<resources>
    <string name="app_name">Corner Detection And Image Quality</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tflitevision_is_not_initialized_yet">TfLiteVision tidak diinialisasikan</string>

    <string name="text_first_criteria">Pastikan perangkat dalam keadaan menyala dan memiliki kecerahan yang cukup</string>
    <string name="text_second_criteria">Menampilkan halaman 4 corner</string>
    <string name="text_third_criteria">Foto harus terlihat jelas</string>
    <string name="text_suggestion">Letakkan di dalam kotak untuk hasil yang maksimal</string>

    <string name="dashboard">Dashboard</string>
    <string name="history">Riwayat Anda</string>
    <string name="camera">Scan</string>

    <string name="history_null">Anda belum mempunyai riwayat scan</string>

    <string-array name="photo_criteria">
        <item>Pastikan perangkat dalam kondisi menyala dan kecerahan layar yang cukup</item>
        <item>Menampilkan halaman 4 Corner</item>
        <item>Foto terlihat jelas</item>
    </string-array>

    <string name="reminder_note">
        Pastikan Anda mengambil foto perangkat dengan posisi layar menyala, memiliki kecerahan yang cukup, dan menampilkan gambar dengan 4 corner
    </string>

    <string name="all">All</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>

    <string name="alert_title">Pin</string>
    <string name="alert_message">Pin created successfully</string>
    <string name="detail_action_bar_title">Detail</string>

    <string name="detail_status">Scanned status: %1$s</string>
    <string name="detail_threshold">Threshold score: %1$s</string>
</resources>