<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:layout_margin="16dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical" >

        <TextView
            style="@style/CriteriaText"
            android:text="@string/text_first_criteria" />

        <View
            style="@style/LineDivider"
            android:background="#999999"/>

        <TextView
            style="@style/CriteriaText"
            android:text="@string/text_second_criteria" />

        <View
            style="@style/LineDivider"
            android:background="#999999"/>

        <TextView
            style="@style/CriteriaText"
            android:text="@string/text_third_criteria" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>